Fixed banner img position and service-item text alignment.

--- a/styles/blocks/banner/banner.css
+++ b/styles/blocks/banner/banner.css
@@ -51,7 +51,7 @@
     }
 
     .banner__screen-img {
-        padding-left: 8px;
+        margin-right: 96px;
 
         order: 1;
     }
