--- a/styles/blocks/service/service-item.css
+++ b/styles/blocks/service/service-item.css
@@ -62,7 +62,7 @@
         margin: auto;
     }
 
-    .service-item__article {
+    .service-item__about {
         margin: 20px 0 0;
 
         text-align: center;
